--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 		<link href="css/styles.css" rel="stylesheet">
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	</head>
 
 	<body>
 		<div class="main-container">
 			<div id="overlay" class="start">
-				<h2 class="title">Phrase Hunter</h2>
+				<h3 class="title">Video Games</h3>
+				<h2 class="title">Title Hunter</h2>
 				<h1 id="game-over-message"></h1>
 				<button id="btn__reset">Start Game</button>
 			</div>
 
 			<div id="banner" class="section">
-				<h2 class="header">Phrase Hunter</h2>
+				<h3 class="header">Video Games</h3>
+				<h2 class="header">Title Hunter</h2>
 			</div>
 
 			<div id="phrase" class="section">
