Added Enter key to start game

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Phrase Hunter</title>
+		<title>Video Games Title Hunter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/styles.css" rel="stylesheet">
 		<link href="css/animate.css" rel="stylesheet">
@@ -17,6 +17,7 @@
 				<h2 class="title">Title Hunter</h2>
 				<h1 id="game-over-message"></h1>
 				<button id="btn__reset">Start Game</button>
+				<h3 class="button-subtitle">Press Enter</h3>
 			</div>
 
 			<div id="banner" class="section">
