Removed Start Game with Enter Button to follow project guidelines

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h2 class="title">Title Hunter</h2>
 				<h1 id="game-over-message"></h1>
 				<button id="btn__reset">Start Game</button>
-				<h3 class="button-subtitle">Press Enter</h3>
+				<!--<h3 class="button-subtitle">Press Enter</h3>-->
 			</div>
 
 			<div id="banner" class="section">
